attached_assets/Pasted--3-7-Checking-NDI-SDK-NDI-runtime-library-not-found-To-_1773267387438.txt
[3/7] Checking NDI SDK...
  NDI runtime library not found.

  To enable NDI output, install the NDI SDK:
    1. Download from: https://ndi.video/tools/download/
    2. Run the installer (e.g., Install_NDI_SDK_v6_Linux.sh)
    3. Copy libndi.so to /usr/lib/ or /usr/local/lib/
    4. Run: sudo ldconfig
    5. Re-run this script

  Continuing without NDI support (grandiose will use mock mode)...

[4/7] Installing npm dependencies...

added 3 packages, and audited 4 packages in 372ms

found 0 vulnerabilities
  Patching grandiose for Linux compatibility (itoa -> snprintf)...
  Patched itoa -> snprintf in grandiose_util.cc
  Building grandiose native addon...
Need to install the following packages:
node-gyp@12.2.0
Ok to proceed? (y) y

gyp info it worked if it ends with ok
gyp info using node-gyp@12.2.0
gyp info using node@20.20.1 | linux | x64
gyp info find Python using Python version 3.12.3 found at "/usr/bin/python3"

gyp info spawn /usr/bin/python3
gyp info spawn args [
gyp info spawn args '/home/administrator/.npm/_npx/c463d28440264a05/node_modules/node-gyp/gyp/gyp_main.py',
gyp info spawn args 'binding.gyp',
gyp info spawn args '-f',
gyp info spawn args 'make',
gyp info spawn args '-I',
gyp info spawn args '/home/administrator/Attached-Assets/linux-server/node_modules/grandiose/build/config.gypi',
gyp info spawn args '-I',
gyp info spawn args '/home/administrator/.npm/_npx/c463d28440264a05/node_modules/node-gyp/addon.gypi',
gyp info spawn args '-I',
gyp info spawn args '/home/administrator/.cache/node-gyp/20.20.1/include/node/common.gypi',
gyp info spawn args '-Dlibrary=shared_library',
gyp info spawn args '-Dvisibility=default',
gyp info spawn args '-Dnode_root_dir=/home/administrator/.cache/node-gyp/20.20.1',
gyp info spawn args '-Dnode_gyp_dir=/home/administrator/.npm/_npx/c463d28440264a05/node_modules/node-gyp',
gyp info spawn args '-Dnode_lib_file=/home/administrator/.cache/node-gyp/20.20.1/<(target_arch)/node.lib',
gyp info spawn args '-Dmodule_root_dir=/home/administrator/Attached-Assets/linux-server/node_modules/grandiose',
gyp info spawn args '-Dnode_engine=v8',
gyp info spawn args '--depth=.',
gyp info spawn args '--no-parallel',
gyp info spawn args '--generator-output',
gyp info spawn args 'build',
gyp info spawn args '-Goutput_dir=.'
gyp info spawn args ]
gyp info spawn make
gyp info spawn args [ 'BUILDTYPE=Release', '-C', 'build' ]
make: Entering directory '/home/administrator/Attached-Assets/linux-server/node_modules/grandiose/build'
  COPY ../build/Release/Processing.NDI.Lib.x64.dll
  CXX(target) Release/obj.target/grandiose/src/grandiose_util.o
../src/grandiose_util.cc: In function ‘napi_status checkStatus(napi_env, napi_status, const char*, uint32_t)’:
../src/grandiose_util.cc:48:13: error: invalid conversion from ‘int’ to ‘const char*’ [-fpermissive]
   48 |     snprintf(errorCode, sizeof(errorCode), "%d", errorInfo->error_code), errorInfo->error_message);
      |     ~~~~~~~~^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
      |             |
      |             int
In file included from /home/administrator/.cache/node-gyp/20.20.1/include/node/node_api.h:12,
                 from ../src/grandiose_util.h:23,
                 from ../src/grandiose_util.cc:22:
/home/administrator/.cache/node-gyp/20.20.1/include/node/js_native_api.h:404:65: note:   initializing argument 2 of ‘napi_status napi_throw_error(napi_env, const char*, const char*)’
  404 |                                                     const char* code,
      |                                                     ~~~~~~~~~~~~^~~~
../src/grandiose_util.cc: In function ‘napi_status checkArgs(napi_env, napi_callback_info, char*, napi_value__**, size_t, napi_valuetype*)’:
../src/grandiose_util.cc:92:23: warning: comparison of integer expressions of different signedness: ‘int’ and ‘size_t’ {aka ‘long unsigned int’} [-Wsign-compare]
   92 |   for ( int x = 0 ; x < argc ; x++ ) {
      |                     ~~^~~~~~
../src/grandiose_util.cc: In function ‘int32_t rejectStatus(napi_env, carrier*, char*, int32_t)’:
../src/grandiose_util.cc:134:51: error: invalid conversion from ‘int’ to ‘const char*’ [-fpermissive]
  134 |     status = napi_create_string_utf8(env, snprintf(errorChars, sizeof(errorChars), "%d", c->status),
      |                                           ~~~~~~~~^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
      |                                                   |
      |                                                   int
/home/administrator/.cache/node-gyp/20.20.1/include/node/js_native_api.h:88:72: note:   initializing argument 2 of ‘napi_status napi_create_string_utf8(napi_env, const char*, size_t, napi_value__**)’
   88 |                                                            const char* str,
      |                                                            ~~~~~~~~~~~~^~~
make: *** [grandiose.target.mk:123: Release/obj.target/grandiose/src/grandiose_util.o] Error 1
make: Leaving directory '/home/administrator/Attached-Assets/linux-server/node_modules/grandiose/build'
gyp ERR! build error
gyp ERR! stack Error: `make` failed with exit code: 2
gyp ERR! stack at ChildProcess.<anonymous> (/home/administrator/.npm/_npx/c463d28440264a05/node_modules/node-gyp/lib/build.js:219:23)
gyp ERR! System Linux 6.14.0-27-generic
gyp ERR! command "/usr/bin/node" "/home/administrator/.npm/_npx/c463d28440264a05/node_modules/.bin/node-gyp" "rebuild"
gyp ERR! cwd /home/administrator/Attached-Assets/linux-server/node_modules/grandiose
gyp ERR! node -v v20.20.1
gyp ERR! node-gyp -v v12.2.0
gyp ERR! $npm_package_name grandiose
gyp ERR! $npm_package_version 0.0.4
gyp ERR! not ok
  grandiose build failed — NDI will run in mock mode
  This is expected if the NDI SDK runtime library is not installed.

[5/7] Checking DeckLink SDK...
  Searching inside DECKLINK_SDK_PATH for SDK headers...
  DeckLink SDK found: /home/administrator/Downloads/Blackmagic_DeckLink_SDK_15.2/Blackmagic DeckLink SDK 15.2/Mac/include

[6/7] Building DeckLink addon...
  Copying SDK headers from /home/administrator/Downloads/Blackmagic_DeckLink_SDK_15.2/Blackmagic DeckLink SDK 15.2/Mac/include...

> decklink-output-linux@1.0.0 install
> node-gyp rebuild

gyp info it worked if it ends with ok
gyp info using node-gyp@10.3.1
gyp info using node@20.20.1 | linux | x64
gyp info find Python using Python version 3.12.3 found at "/usr/bin/python3"

gyp info spawn /usr/bin/python3
gyp info spawn args [
gyp info spawn args '/home/administrator/Attached-Assets/linux-server/decklink-addon/node_modules/node-gyp/gyp/gyp_main.py',
gyp info spawn args 'binding.gyp',
gyp info spawn args '-f',
gyp info spawn args 'make',
gyp info spawn args '-I',
gyp info spawn args '/home/administrator/Attached-Assets/linux-server/decklink-addon/build/config.gypi',
gyp info spawn args '-I',
gyp info spawn args '/home/administrator/Attached-Assets/linux-server/decklink-addon/node_modules/node-gyp/addon.gypi',
gyp info spawn args '-I',
gyp info spawn args '/home/administrator/.cache/node-gyp/20.20.1/include/node/common.gypi',
gyp info spawn args '-Dlibrary=shared_library',
gyp info spawn args '-Dvisibility=default',
gyp info spawn args '-Dnode_root_dir=/home/administrator/.cache/node-gyp/20.20.1',
gyp info spawn args '-Dnode_gyp_dir=/home/administrator/Attached-Assets/linux-server/decklink-addon/node_modules/node-gyp',
gyp info spawn args '-Dnode_lib_file=/home/administrator/.cache/node-gyp/20.20.1/<(target_arch)/node.lib',
gyp info spawn args '-Dmodule_root_dir=/home/administrator/Attached-Assets/linux-server/decklink-addon',
gyp info spawn args '-Dnode_engine=v8',
gyp info spawn args '--depth=.',
gyp info spawn args '--no-parallel',
gyp info spawn args '--generator-output',
gyp info spawn args 'build',
gyp info spawn args '-Goutput_dir=.'
gyp info spawn args ]
gyp info spawn make
gyp info spawn args [ 'BUILDTYPE=Release', '-C', 'build' ]
make: Entering directory '/home/administrator/Attached-Assets/linux-server/decklink-addon/build'
  CXX(target) Release/obj.target/decklink_output/src/decklink_output.o
In file included from ../src/decklink_output.cpp:11:
/home/administrator/Attached-Assets/linux-server/decklink-addon/sdk-include/DeckLinkAPI.h:64:10: fatal error: CoreFoundation/CoreFoundation.h: No such file or directory
   64 | #include <CoreFoundation/CoreFoundation.h>
      |          ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
compilation terminated.
make: *** [decklink_output.target.mk:119: Release/obj.target/decklink_output/src/decklink_output.o] Error 1
make: Leaving directory '/home/administrator/Attached-Assets/linux-server/decklink-addon/build'
gyp ERR! build error
gyp ERR! stack Error: `make` failed with exit code: 2
gyp ERR! stack at ChildProcess.<anonymous> (/home/administrator/Attached-Assets/linux-server/decklink-addon/node_modules/node-gyp/lib/build.js:216:23)
gyp ERR! System Linux 6.14.0-27-generic
gyp ERR! command "/usr/bin/node" "/home/administrator/Attached-Assets/linux-server/decklink-addon/node_modules/.bin/node-gyp" "rebuild"
gyp ERR! cwd /home/administrator/Attached-Assets/linux-server/decklink-addon
gyp ERR! node -v v20.20.1
gyp ERR! node-gyp -v v10.3.1
gyp ERR! not ok
npm error code 1
npm error path /home/administrator/Attached-Assets/linux-server/decklink-addon
npm error command failed
npm error command sh -c node-gyp rebuild
npm error A complete log of this run can be found in: /home/administrator/.npm/_logs/2026-03-11T22_16_17_828Z-debug-0.log